--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="gvb6kRSu59d2tLZG8wWD1dx46lqGu59vasGU3fTVAjY" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./general.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
