--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./animation.css" />
+    <link rel="stylesheet" href="./queries.css">
     <title>Document</title>
   </head>
 
